# libNumHop

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
NumHopTest/: .gitignore  main.cpp
include/: VariableStorage.h
include/numhop/: Expression.h  Helpfunctions.h  VariableStorage.h
libNumHop/: Expression.cc  Expression.h  Helpfunctions.cc  Helpfunctions.h  VariableStorage.cc  VariableStorage.h
src/: Expression.cpp  Helpfunctions.cpp  VariableStorage.cc  VariableStorage.cpp
test/: CMakeLists.txt  main.cc  main.cpp
